Revert "Spring boot 4.0 (#138)"
This reverts commit 603fda2509c86b396be942ee57003e055043f9f8.